added settings and order page

--- a/mainsite/templates/mainsite/home_page.html
+++ b/mainsite/templates/mainsite/home_page.html
@@ -9,7 +9,7 @@
 <a href="{% url 'settings_page' %}">
     Настройки
 </a>
-<a href="{% url 'login' %}">
+<a href="{% url 'order_info_page' %}">
     Информация 
 </a>
 <a href="{% url 'login' %}">
