--- a/mainsite/templates/mainsite/home_page.html
+++ b/mainsite/templates/mainsite/home_page.html
@@ -18,7 +18,7 @@
 <a href="{% url 'login' %}">
     Оформить заказ
 </a>
-<a href="{% url 'login' %}">
+<a href="{% url 'part_list_page' %}">
     Заказать деталь
 </a>
 {% endblock %}
