--- a/mainsite/templates/mainsite/cars/cars.html
+++ b/mainsite/templates/mainsite/cars/cars.html
@@ -1,13 +1,29 @@
 {% extends 'mainsite/base.html' %} {% block content %} {% load static %}
-машины
-<form method='POST' action=''>
-    {% csrf_token %}
-{{form}}
-<a href="{% url 'cars_details_page' %}">
-    Список
-</a>
-<div class="d-flex justify-content-center mt-3 login_container">
-    <input class="btn login_btn" type="submit" value="Добавить">
+<div class="cars">
+    <h1>Машины</h1>
+    <form method='POST' action=''>
+        {% csrf_token %}
+        <div class="auto_brand cars_fields">
+            <p>Марка авто</p>
+            {{form.brand}}
+        </div>
+        <div class="model cars_fields">
+            <p>Год выпуска</p>
+            {{form.model}}
+        </div>
+        <div class="vin_number cars_fields">
+            <p>VIN-номер</p>
+            {{form.gov_number}}
+        </div>
+
+        <div class="cars_btn">
+            <div class="cars_solo_btn">
+                <a href="{% url 'cars_details_page' %}" >Список</a>
+            </div>
+            <input  type="submit" value="Добавить">
+        </div>
+
+    </form>
 </div>
-</form>
+
 {% endblock %}
