--- a/mainsite/templates/mainsite/cars/cars_detail.html
+++ b/mainsite/templates/mainsite/cars/cars_detail.html
@@ -1,8 +1,19 @@
 {% extends 'mainsite/base.html' %} {% block content %} {% load static %}
-Список
+<h1 style="color: white; text-align:center;">Машины</h1>
 {% for auto in autos %}
-    {{auto.brand}}
-    {{auto.model}}
-    {{auto.gov_number}}
+    <div class="auto_detail_car">
+        <div class="auto_brand auto_detail_field">
+            <p>Марка авто:</p>
+            {{auto.brand}}
+        </div>
+        <div class="auto_model auto_detail_field">
+            <p>Год выпуска:</p>
+            {{auto.model}}
+        </div>
+        <div class="auto_number auto_detail_field">
+            <p>VIN-Номер:</p>
+            {{auto.gov_number}}
+        </div>
+    </div>
 {% endfor %}
 {% endblock %}
