--- a/mainsite/templates/mainsite/reg_auth/login.html
+++ b/mainsite/templates/mainsite/reg_auth/login.html
@@ -1,14 +1,24 @@
 {% extends 'mainsite/base.html' %} {% block content %} {% load static %}
-<h1>LOGIN</h1>
+<div class="login_page">
+<p>Чтобы продолжить вам нужно авторизоваться</p>
 {% csrf_token %}
-<form method='POST' action=''>
-<input type='text' name="username">
-<input type='text' name="password">
-							<div class="d-flex justify-content-center mt-3 login_container">
-				 				<input class="btn login_btn" type="submit" value="Login">
-				   			</div>
-</form>
+<form method='POST' action='' class="test">
+
+<div class="login_field">
+	<p>Логин</p>
+	<input type='text' name="username">
+</div>
+<div class="password_field">
+	<p>Пароль</p>
+	<input type='text' name="password">
+</div>
 <a href="{% url 'registration' %}">
-    REG
+	<p>Регистрация</p>
 </a>
+<div class="login_btn">
+	<input type="submit" value="Войти">
+</div>
+</form>
+
+</div>
 {% endblock %}
