--- a/mainsite/templates/mainsite/base.html
+++ b/mainsite/templates/mainsite/base.html
@@ -12,6 +12,7 @@
     <link href='{% static "mainsite/css/reg.css" %}' rel="stylesheet">
     <link href='{% static "mainsite/css/main.css" %}' rel="stylesheet">
     <link href='{% static "mainsite/css/cars.css" %}' rel="stylesheet">
+    <link href='{% static "mainsite/css/buttons.css" %}' rel="stylesheet">
 </head>
 <body class="body">
 {% block content %}
