--- a/mainsite/templates/mainsite/home_page.html
+++ b/mainsite/templates/mainsite/home_page.html
@@ -25,7 +25,7 @@
         <a href="{% url 'order_info_page' %}">
             <img src='{% static "/mainsite/img/info-circle.svg" %}' alt="">
         </a>
-        <a href="{% url 'login' %}">
+        <a href="{% url 'job_list_page' %}">
             <img src='{% static "/mainsite/img/list.svg" %}' alt="">
         </a>
         <a href="{% url 'login' %}">
