--- a/mainsite/templates/mainsite/order_info/order_check.html
+++ b/mainsite/templates/mainsite/order_info/order_check.html
@@ -1,3 +1,6 @@
 {% extends 'mainsite/base.html' %} {% block content %} {% load static %}
 TEST
+<p>№{{order.id}} {{order.order_date}}</p>
+
+
 {% endblock %}
