--- a/mainsite/templates/mainsite/home_page.html
+++ b/mainsite/templates/mainsite/home_page.html
@@ -28,7 +28,7 @@
         <a href="{% url 'job_list_page' %}">
             <img src='{% static "/mainsite/img/list.svg" %}' alt="">
         </a>
-        <a href="{% url 'login' %}">
+        <a href="{% url 'creation_order_page' %}">
             <img src='{% static "/mainsite/img/plus.svg" %}' alt="">
         </a>
         <a href="{% url 'part_list_page' %}">
