--- a/mainsite/templates/mainsite/order_info/order_info.html
+++ b/mainsite/templates/mainsite/order_info/order_info.html
@@ -8,9 +8,24 @@
         <img src='{% static "mainsite/img/envelope.svg" %}' alt="lol" width="30px" >
     </a>
     <p>№{{order.id}} {{order.order_date}}</p>
+
+
+    {% if order.status == "0" %}
+    <a href="">
+        <img src='{% static "mainsite/img/bill.svg" %}' alt="" width="28px" >
+    </a>
+    <a href="">
+        <img src='{% static "mainsite/img/wallet.svg" %}' alt="" width="28px" >
+    </a>
+    {% elif order.status == "1" %}
     <a href="">
         <img src='{% static "mainsite/img/wallet-green.svg" %}' alt="" width="28px" >
     </a>
+    {% elif order.status == "2" %}
+    <a href="">
+        <img src='{% static "mainsite/img/wallet-green.svg" %}' alt="" width="28px" >
+    </a>
+    {% endif %}
     </div> 
 {% endfor %}
 
