--- a/mainsite/templates/mainsite/order_info/order_pay.html
+++ b/mainsite/templates/mainsite/order_info/order_pay.html
@@ -1,3 +1,16 @@
 {% extends 'mainsite/base.html' %} {% block content %} {% load static %}
 
+<div class="order_bill">
+<h2>Оплата</h2>
+<div class="order_name">
+    <p>№{{order.id}} {{order.order_date}}</p>
+</div>
+<div class="order_sum">
+   <p>Итог {{bill.total}}руб.</p> 
+</div>
+<p>В настоящий момент возможна только оплата наличными, либо перевод на карту</p>
+<p>CБЕРБАНК - 5467 6700 2474 8017</p>
+<p>ВЛАДИСЛАВ Ш.</p>
+</div>
+
 {% endblock %}
