--- a/mainsite/templates/mainsite/settings.html
+++ b/mainsite/templates/mainsite/settings.html
@@ -21,7 +21,7 @@
         <p class="settings_label">Имя</p>
         {{form.first_name}}
     </div>
-    <input class="settings_btn" type="submit" value="settings">
+    <input class="settings_btn" type="submit" value="Сохранить">
 </form>
 </div>
 
