--- a/mainsite/static/mainsite/css/buttons.css
+++ b/mainsite/static/mainsite/css/buttons.css
@@ -164,3 +164,17 @@
     display: flex;
     justify-content: space-between;
 }
+
+.bill_page {
+    background-color: green;
+    color: white;
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    height: 300px;
+    width: 300px;
+    text-align: center;
+    padding-top: 65px;
+    margin-left: 38px;
+    margin-top: 150px;
+}
